update template,use timezone instead datetime

--- a/CBT/templates/index.html
+++ b/CBT/templates/index.html
@@ -2,8 +2,8 @@
         
     {% block no_container %}
     {% block navbar %}
-    <div class="container-lg h-100">
-      <div class="row py-4  h-100">
+    <div class="container-lg " style="min-height:100vh;">
+      <div class="row py-4" style="min-height:100vh;">
         {% block leftside %}
           {% include 'leftside.html' %}
           {% endblock leftside %}
