--- a/Test/templates/Test/overviewTest.html
+++ b/Test/templates/Test/overviewTest.html
@@ -4,6 +4,24 @@
 INFORMASI PESERTA DAN TES
 {% endblock web_title %}
 {%block no_container%}
+<div class="container-lg px-3">
+    <div class="row py-4 h-100">
+          <div class=" m-auto d-flex align-items-center flex-wrap text-center">
+            <div class="align-items-center">
+          <div class="row d-flex justify-content-center site-banner-mini">
+              <div class="">
+                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" fill="currentColor" class="bi pr-2 bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
+<path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
+</svg>
+                  
+              </div>
+              
+              <div class="pb-2">
+                  
+                 <h1 class=" mx-auto text-break font-weight-bold"><span class="text-success">CBT</span> SIMPEL</h1>
+              </div>
+               </div>
+
   {% block card_header %}
     <h3 class="m-1"><strong>INFORMASI PESERTA DAN TES</strong></h3>
   {% endblock card_header %}
@@ -16,21 +34,20 @@ INFORMASI PESERTA DAN TES
     {% else %}
         {% if form == None %}
             <a class="btn btn-primary" href="q/welcome">Lanjut&raquo;</a>
-        {% else %}  
-            <form method="POST">
-                {% csrf_token %}
-                <div class="d-flex flex-row justify-content-between">
-                        <div class="form-inline flex-row">
-                        <label for="id_passw" class="h6 my-auto mr-3 text-center text-muted">  
-                            Masukan Password Tes :
-                        </label>
-                        <div>
-                        {{form.password|add_class:"form-control" |attr:"type:password"}}
-                        </div>
-                        </div>
-                        <input class="btn rounded my-1 ml-2 btn-primary" type="submit" value="Kirim"></form>
-                    </div>
-            </form>
+        {% else %}
+        {% if form.errors.password %}
+            <div class="alert alert-danger mt-2  fade show pb-0" role="alert">
+                <p> Password mungkin salah</p>
+                
+                
+            </div>
+        {% endif %}
+        <form method="POST" class="row mx-1 ">
+            {% csrf_token %}
+            {{form.password|attr:"placeholder:Masukan Password Tes"|attr:"pattern:\d*" |attr:"maxlength:6" |add_class:"form-control form-control-lg col-sm-9"}}
+            <button class="btn btn-success mt-1 my-sm-0 col-sm-3 text-nowrap" type="submit">Mulai</button>
+          </form>
+            
         {% endif %}
     {% endif %}
 {% endblock card_footer %}
