--- a/Test/templates/Test/snippets/detailtestsession.html
+++ b/Test/templates/Test/snippets/detailtestsession.html
@@ -1,4 +1,4 @@
-<ul class="list-group block list-group-flush">
+<ul class="list-group block list-group-flush text-left">
     <li class="list-group-item"><div class="row">
         <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Nama Peserta</div></div>
         <div class="col-md-9 pl-2"><div class="card-text my-auto">{{testTakerInfo.testTakerName}}</div></div>
