--- a/Test/templates/Test/verifyAnswer.html
+++ b/Test/templates/Test/verifyAnswer.html
@@ -2,6 +2,7 @@
 {% block web_title %}
 KONFIRMASI IDENTITAS DAN JAWABAN
 {% endblock web_title %}
+{% block no_container %}
 {% block card_header %}
     <h3 class="m-1"><strong>KONFIRMASI IDENTITAS DAN JAWABAN</strong></h3>
                     
@@ -90,3 +91,4 @@ KONFIRMASI IDENTITAS DAN JAWABAN
     {% endif %}
         
 {% endblock card_footer %}
+{% endblock no_container %}
