--- a/CBT/templates/snippets/base.html
+++ b/CBT/templates/snippets/base.html
@@ -34,7 +34,7 @@
       {% endblock head_script %}
 
   </head>
-  <body style="height:100vh; overflow:hidden">
+  <body style="min-height:100vh;">
 {% block no_container %}
        <div class="container-lg h-100 mt-4">
          <div class="d-flex container-fluid h-100">
