--- a/Test/templates/Test/joinTest.html
+++ b/Test/templates/Test/joinTest.html
@@ -4,8 +4,8 @@
 Masukan Kode Tes
 {% endblock web_title %}
 {% block no_container %}
-    <div class="container-lg px-3 h-100">
-      <div class="row py-4 h-100">
+    <div class="container-lg px-3 h-100" >
+      <div class="row py-4 h-100" style="min-height:100vh;">
             <div class=" m-auto d-flex align-items-center flex-wrap text-center">
               <div class="align-items-center">
             <div class="row d-flex justify-content-center site-banner-mini">
