--- a/Test/templates/Test/overviewTest.html
+++ b/Test/templates/Test/overviewTest.html
@@ -4,9 +4,8 @@
 INFORMASI PESERTA DAN TES
 {% endblock web_title %}
 {%block no_container%}
-<div class="container-lg px-3">
-    <div class="row py-4 h-100">
-          <div class=" m-auto d-flex align-items-center flex-wrap text-center">
+<div class="d-flex flex-wrap container-lg px-2 align-items-end border border-dark" style="min-height:100vh">
+          <div class="border border-primary m-auto d-flex align-items-center flex-wrap text-center">
             <div class="align-items-center">
           <div class="row d-flex justify-content-center site-banner-mini">
               <div class="">
@@ -52,4 +51,3 @@ INFORMASI PESERTA DAN TES
     {% endif %}
 {% endblock card_footer %}
 {%endblock no_container%}
-
