--- a/Test/templates/Test/verifyAnswer.html
+++ b/Test/templates/Test/verifyAnswer.html
@@ -3,22 +3,44 @@
 KONFIRMASI IDENTITAS DAN JAWABAN
 {% endblock web_title %}
 {% block no_container %}
-{% block card_header %}
-    <h3 class="m-1"><strong>KONFIRMASI IDENTITAS DAN JAWABAN</strong></h3>
-                    
+<div class="container-lg px-3">
+    <div class="row py-4 h-100">
+          <div class=" m-auto d-flex align-items-center flex-wrap flex-fill text-center">
+            <div class="align-items-center flex-fill">
 
-{% endblock card_header %}
-{% block card_body %}
-  <div class="alert alert-success" role="alert">
-  {% if answerQuery.count < packQuery.questionCount %}
-        <h5 class="text-center"> <a href="{{lastQuest}}">Selesaikan seluruh  jawaban </a> atau habiskan waktu sebelum mengirim jawaban</h4>
-    {% else %}
+          <div class="row d-flex justify-content-center site-banner-mini">
+              <div class="">
+                     <svg xmlns="http://www.w3.org/2000/svg" width="40px" height="40px" fill="currentColor" class="bi pr-2 bi-arrow-up-right-square-fill" viewBox="0 0 16 16">
+<path d="M14 0a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12zM5.904 10.803 10 6.707v2.768a.5.5 0 0 0 1 0V5.5a.5.5 0 0 0-.5-.5H6.525a.5.5 0 1 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 .707.707z"/>
+</svg>
+                  
+              </div>
+              
+              <div class="pb-2">
+                  
+                 <h1 class=" mx-auto text-break font-weight-bold"><span class="text-success">CBT</span> SIMPEL</h1>
+              </div>
+               </div>
+
+  {% block header %}
+    <h3 class="m-1 text-uppercase"><strong>KONFIRMASI IDENTITAS DAN JAWABAN</strong></h3>
+  {% endblock header %}
+  {% if answerQuery|length < questionCount %}
+  <div class="alert alert-warning text-left" role="alert">
+            <h4 class="alert-heading">Anda belum menyelesaikan seluruh pertanyaan</h4>
+            <hr>
+            <p class="mb-0"><a href="{{lastQuest}}">Lanjut Mengerjakan </a></p>
+            {% else %}
+            <div class="alert alert-success text-left" role="alert">        
     <h4 class="alert-heading">Selamat ! Anda telah menyelesaikan seluruh pertanyaan</h4>
     <hr>
     <p class="mb-0">Silakan memeriksa kembali jawaban anda!</p>
     {% endif %}
   </div>    
-    <ul class="list-group block list-group-flush">
+    <ul class="list-group block text-left list-group-flush">
+        <li class="list-group-item justify-content-left"><div class="row">
+            <span class="time"></span>
+            </div></li>
       <li class="list-group-item"><div class="row">
           <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Nama Peserta</div></div>
           <div class="col-md-9 pl-2"><div class="card-text my-auto">{{takerQuery.testTakerName}}</div></div>
@@ -41,7 +63,7 @@ KONFIRMASI IDENTITAS DAN JAWABAN
           </div></li>
       <li class="list-group-item"><div class="row">
           <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Jumlah Soal</div></div>
-          <div class="col-md-9 pl-2"><div class="card-text my-auto">{{packQuery.questionCount}}</div></div>
+          <div class="col-md-9 pl-2"><div class="card-text my-auto">{{packQuery.get_question_count}}</div></div>
           </div></li>
       <li class="list-group-item"><div class="row">
           <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Jadwal / Waktu Mulai Tes</div></div>
@@ -57,12 +79,11 @@ KONFIRMASI IDENTITAS DAN JAWABAN
           </div></li>
       <li class="list-group-item"><div class="row">
           <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted mt-auto mb-3 h6 text-uppercase">Jawaban Anda :</div></div>
-            <ul class="list-group block list-group-flush">
+            <ul class="flex-fill d-flex justify-content-between list-group block list-group-flush">
             {% for q in query %}
               <li class="list-group-item d-flex flex-column py-1  "><div class="row">
                   <div class="col-md-2 pl-2 my-auto"><div class="card-title text-muted my-auto  h6 text-uppercase">Soal Ke-{{q.num}}</div></div>
                   <div class="col-md-5 pl-2"><div class="card-text h5 border border-info rounded my-1 p-2">{{q.question}}</div></div>
-                  
                   {% if q.answer == "Error"%}
                     <div class="col-md-5 pl-2"><a href="{% url 'test:question' packQuery.testID q.questID %}" class="card-text btn btn-info btn-block text-left rounded h6 my-1 p-2">Belum Diisi</a></div>
                     {% else %}
@@ -79,9 +100,8 @@ KONFIRMASI IDENTITAS DAN JAWABAN
         sesi anda akan dihapus dan jawaban dikirimkan kepada penyedia tes. Anda tidak dapat mengubah jawaban setelah mengirim.</small>
         </li>
 
-{% endblock card_body %}
-{% block card_footer %}
-    {% if answerQuery.count < packQuery.questionCount %}
+
+    {% if answerQuery|length < questionCount and packQuery.settings.completeRequired %}
         <h5 class="text-center"> <a href="{{lastQuest}}">Selesaikan seluruh  jawaban </a> atau habiskan waktu sebelum mengirim jawaban</h4>
     {% else %}
     <form method="post">
@@ -89,6 +109,14 @@ KONFIRMASI IDENTITAS DAN JAWABAN
         <button type="submit" class="btn btn-primary">Kirim Jawaban Saya</button>
     </form>
     {% endif %}
+    <script>
         
-{% endblock card_footer %}
+        form = document.getElementsByTagName('form')[0] 
+        setInterval(async () => { 
+            now = (Date.parse(new Date) / 1000)    
+            makeTimer(({{takerQuery.timeStart |date:"U"}}+{{packQuery.timeLimit}}*60),{{timeNow |date:"U"}},'.time',() =>  { form.submit()})
+        },1000)
+    </script>    
+
+</div>
 {% endblock no_container %}
